--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         top: 200px;
         width: 800px;
         height: 400px;
-        background-image: url(./mouse.png);
+        background-image: url(https://github.com/skymous/skymous.github.io/blob/main/mouse.png?raw=true);
         animation:  move 1s steps(2) infinite,go 3s forwards;
     }
     @keyframes move{
