--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ background-color: #fff;
 
  <!-- 首頁背景圖，CSS #imageContainer 的寬高可變更圖片大小  -->
  <div id="imageContainer" style="display: none;" >
-  <img id="image" src="./圖片/橫的封面.jpg" style="width: 100%; height: 100%; object-fit: cover; margin-left: 35%; margin-top: 100px;">
+  <img id="image" src="./圖片/橫的封面.jpg" class="flyman">
 </div>
 
 
