--- a/洗衣機7.html
+++ b/洗衣機7.html
@@ -36,21 +36,7 @@
   
     }
 
-    .next,.last {
-      text-decoration: none;
-     padding: 8px 10px;
-     color: brown;
-     border-radius: 5px;
-     width: 80px;
-     height: 15px;
-     font-size: 16px;
-     display: flex;
-     text-align: left;
-     float: left;
-     align-items: center;
-     justify-content: center;
-     font-family: 'Noto Serif TC', serif;
-     }
+
 
     .pagess{
       margin-left: auto;
@@ -73,6 +59,7 @@
   
 
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
@@ -85,7 +72,7 @@
             </nav>
           </div>
  
-            <h1>洗衣機</h1>
+           
 
       
     </header>
@@ -115,7 +102,7 @@
 <div class="pagess">
   <a  class="last"  href="./洗衣機6.html">上一頁</a>
 </div>
-   
+<script src="./scripts/ntcvs.js"></script>   
 </body>
 
     <footer>
