--- a/洗衣機4.html
+++ b/洗衣機4.html
@@ -36,21 +36,7 @@
   
     }
 
-    .next,.last {
-      text-decoration: none;
-     padding: 8px 10px;
-     color: brown;
-     border-radius: 5px;
-     width: 80px;
-     height: 15px;
-     font-size: 16px;
-     display: flex;
-     text-align: left;
-     float: left;
-     align-items: center;
-     justify-content: center;
-     font-family: 'Noto Serif TC', serif;
-     }
+
 
     .pagess{
       margin-left: auto;
@@ -73,6 +59,7 @@
   
 
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
@@ -85,16 +72,18 @@
             </nav>
           </div>
  
-            <h1>洗衣機</h1>
+
 
    
     </header>
 
     <p class="laundry">
         &nbsp;&nbsp;   弟弟認同的點了點頭，突然將話鋒引到沈默的我身上，他問：「那奶奶妳有夢想嗎？」正在洗的衣服口袋裡面好像有什麼東西，突然發出好大的聲響，也像是我被嚇到所以發出的聲音，我清了清痰，慢慢地回答：「有啊，奶奶也有夢想。」
-        &nbsp;&nbsp;  我的回答成功引起來男孩興致，他興奮地看著我，期待我接下來的回答，但我卻說：「不過這是奶奶的秘密。」男孩眼中的星光肉眼可見的暗淡下去。
+        <br>
+        <br>&nbsp;&nbsp;  我的回答成功引起來男孩興致，他興奮地看著我，期待我接下來的回答，但我卻說：「不過這是奶奶的秘密。」男孩眼中的星光肉眼可見的暗淡下去。
         &nbsp;&nbsp;  「你如果找到你的夢想，再來跟奶奶交換好不好？」我看著男孩眼中的星光燃起，他說：「好，打勾勾！」伸出手才想起我只是一台洗衣機，嘿嘿的笑了起來。
-        &nbsp;&nbsp;  他靠近我，小聲的說：「奶奶我跟妳說喔。我前幾天看了一本叫老人與海的故事書。裡面的老爺爺好厲害！可以一個人出去捕那～麼大的魚！」
+        <br>
+        <br> &nbsp;&nbsp;  他靠近我，小聲的說：「奶奶我跟妳說喔。我前幾天看了一本叫老人與海的故事書。裡面的老爺爺好厲害！可以一個人出去捕那～麼大的魚！」
         &nbsp;&nbsp;  「所以我也想當漁夫！」
         &nbsp;&nbsp;  「這算是夢想嗎？」我看著男孩神彩奕奕的面龐，備感欣慰，和藹地說：「當然算呀！看來你也有自己的夢想了呢！」
         &nbsp;&nbsp;  男孩開心地笑著，又問我：「那奶奶你要告訴我妳的夢想了嗎？」當我要開口時，一陣急促的鈴聲響起，母親從口袋拿出手機，接起電話。
@@ -107,7 +96,7 @@
   <a  class="last"  href="./洗衣機3.html">上一頁</a>
     <a  class="next" href="./洗衣機5.html">下一頁</a>
 </div>
-    
+<script src="./scripts/ntcvs.js"></script>   
 </body>
 
     <footer>
