--- a/page5.html
+++ b/page5.html
@@ -80,7 +80,7 @@ margin-right:auto;
 &nbsp;&nbsp;幼蟲與若蟲。同樣經歷蛻變的時刻，但兩者之間只相差結蛹的過程，
 而凝結出的結果截然不同。好運討喜的瓢蟲與擅於偽裝的竹節蟲，我們在改變的同時，不知是否其實是想掩蓋住自己的缺陷。
 <br>
-這些導演與演員們，他們想透過電影跟我們這一世代傳達的訊息。不管是心路歷程還是自我探索，他們都透過攝影機，赤裸的展示在螢幕上。有時是想為在自我掙扎的青少年搭把手，而有時是為迷惘的雛鳥做導引。他們的用心，你會在低下頭去看自己留下的腳印時發現。
+<br> 這些導演與演員們，他們想透過電影跟我們這一世代傳達的訊息。不管是心路歷程還是自我探索，他們都透過攝影機，赤裸的展示在螢幕上。有時是想為在自我掙扎的青少年搭把手，而有時是為迷惘的雛鳥做導引。他們的用心，你會在低下頭去看自己留下的腳印時發現。
 </p>
 
 
@@ -142,7 +142,7 @@ margin-right:auto;
     </p>
   <img src="./圖片/U6xBvinpbCSKt1nlhqwG-1628x1080.jpg" alt="">
 
-    <p class="bold" style="margin-left: 30%;">
+    <p class="bold" >
         「每個人對自己都有疑問，這就是青春的美妙之處。」
         <br>
         <br>
@@ -173,7 +173,7 @@ margin-right:auto;
     <br>
 </p>
 <img src="./圖片/e732c082-de76-864a-deae-8fc1e93f6b09_620.jpg" alt="">
-<p class="bold" style="margin-left: 30%;">
+<p class="bold">
 「人生中的每個拒絕，每個失敗，都成就了此刻的你。」
 </p>
 
