--- a/插畫.html
+++ b/插畫.html
@@ -52,6 +52,7 @@ width: 65%;
 </head>
 <body>
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
@@ -76,11 +77,14 @@ width: 65%;
       </div>
     </div>
     </header>
-<img src="./圖片/插畫/1.png" alt="">
+    <div class="somedraw">
+      <img src="./圖片/插畫/1.png" alt="">
 <img src="./圖片/插畫/2.png" alt="">
 <img src="./圖片/插畫/3.png" alt="">
 <img src="./圖片/插畫/4.png" alt="">
 <img src="./圖片/插畫/5.png" alt="">
+    </div>
+
 
 </body>
 
