--- a/攝影.html
+++ b/攝影.html
@@ -51,6 +51,7 @@ width: 80%;
 </head>
 <body>
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
@@ -75,14 +76,16 @@ width: 80%;
       </div>
     </div>
     </header>
-
-<img src="./圖片/校刊攝影/1.png" alt="">
+<div class="somephoto">
+  <img src="./圖片/校刊攝影/1.png" alt="">
 <img src="./圖片/校刊攝影/2.png" alt="">
 <img src="./圖片/校刊攝影/3.png" alt="">
 <img src="./圖片/校刊攝影/4.png" alt="">
 <img src="./圖片/校刊攝影/5.png" alt="">
 <img src="./圖片/校刊攝影/60.png" alt="">
 <img src="./圖片/校刊攝影/正與新.png" alt="">
+</div>
+
 
 
 
