--- a/英文創作.html
+++ b/英文創作.html
@@ -59,6 +59,7 @@ p{
 </head>
 <body>
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
@@ -85,20 +86,19 @@ p{
     </header>
 
 
-  <p>
-    <span class="enovel"> The Legend—Messi</span>
+  <p  class="enovel">
+    <span> The Legend—Messi</span>
              <span class="writer"> <br>-貿二乙 謝亞筑</span>
-    <br> Do you still remember the night when almost everyone in Taiwan was cheering for Argentina? Yes, that’s the final of 2022 FIFA World Cup! Speaking of soccer, Lionel Messi, one of the best soccer players from Argentina, may first come to your mind. So do I! 
-   </p>
+    <br><br> Do you still remember the night when almost everyone in Taiwan was cheering for Argentina? Yes, that’s the final of 2022 FIFA World Cup! Speaking of soccer, Lionel Messi, one of the best soccer players from Argentina, may first come to your mind. So do I! 
+   <br>
    
-   <p>
-     We all know Messi scored so many goals during 2022 FIFA World Cup last year. Have you ever noticed that every time after Messi scored a goal, he would celebrate by looking up and pointing to the sky? Why? That is a long story. When Messi was 4, he joined a local club and coached by his father. However, his future as a professional soccer player was threatened when he was 10 years old—he was diagnosed with growth hormone deficiency, which stopped him from getting taller. Because he is shorter than any other same-aged players, even his parents did not want him to play soccer. Only his maternal grandmother, Celia, did not give up. She encouraged him by saying that she believed he would be the best player in the future, she also persuaded his parents to let Messi play soccer. Right before his eleventh birthday, Celia died. She didn’t have the chance to see Messi become a legend later. That is why Messi would look up and point to the sky after he scores. It seems like he tries to say to his grandma,“This goal is for you. Do you see that? ” He also set up a foundation called Leo Messi Foundation, which aims to help children and young people around the world through sports.
-   </p>
+   <br> We all know Messi scored so many goals during 2022 FIFA World Cup last year. Have you ever noticed that every time after Messi scored a goal, he would celebrate by looking up and pointing to the sky? Why? That is a long story. When Messi was 4, he joined a local club and coached by his father. However, his future as a professional soccer player was threatened when he was 10 years old—he was diagnosed with growth hormone deficiency, which stopped him from getting taller. Because he is shorter than any other same-aged players, even his parents did not want him to play soccer. Only his maternal grandmother, Celia, did not give up. She encouraged him by saying that she believed he would be the best player in the future, she also persuaded his parents to let Messi play soccer. Right before his eleventh birthday, Celia died. She didn’t have the chance to see Messi become a legend later. That is why Messi would look up and point to the sky after he scores. It seems like he tries to say to his grandma,“This goal is for you. Do you see that? ” He also set up a foundation called Leo Messi Foundation, which aims to help children and young people around the world through sports.
+   <br>
    
-   <p>
-     It is really touching, isn’t it? There are so many stories about Messi. What you read is just one of them. From the story, I realized why we are so crazy about Messi. Indeed, he has perfect skills of playing soccer, but the most important thing we saw is his bravery, his passion for soccer, his heart full of appreciation, and so on. 
-    Honestly, Messi is the first athlete that I know. When I was in elementary school, my classmates from the school soccer team all admired Messi a lot! I usually played soccer with them after class, and they sometimes mentioned his name. I didn’t recognize who he was in the beginning until I asked them. They told me that he is an extraordinary soccer player from Argentina, and he has already got so many big prizes at a young age. Messi was their role model, and they hoped to be able to play soccer like him. Since then, Messi has played an important part in my life! Because of him, I find my interest in watching sports competitions. By the way, if you want to see more Messi, who plays for Paris Saint-Germain the club, make sure to stay tuned to UEFA from February 15th to June 10th this year! I am really looking forward to it!
-   </p>
+   <br> It is really touching, isn’t it? There are so many stories about Messi. What you read is just one of them. From the story, I realized why we are so crazy about Messi. Indeed, he has perfect skills of playing soccer, but the most important thing we saw is his bravery, his passion for soccer, his heart full of appreciation, and so on. 
+   <br>
+   <br>Honestly, Messi is the first athlete that I know. When I was in elementary school, my classmates from the school soccer team all admired Messi a lot! I usually played soccer with them after class, and they sometimes mentioned his name. I didn’t recognize who he was in the beginning until I asked them. They told me that he is an extraordinary soccer player from Argentina, and he has already got so many big prizes at a young age. Messi was their role model, and they hoped to be able to play soccer like him. Since then, Messi has played an important part in my life! Because of him, I find my interest in watching sports competitions. By the way, if you want to see more Messi, who plays for Paris Saint-Germain the club, make sure to stay tuned to UEFA from February 15th to June 10th this year! I am really looking forward to it!
+   </p >
    
 
 
