--- a/page2.html
+++ b/page2.html
@@ -36,71 +36,7 @@
   color: rgb(243, 245, 247);
  }
 
- .color-rectangle {
-  background-color: #2C2D32;
-  width: 250px; /* 調整寬度 */
-  height:6500px; /* 調整高度 */
-  position: absolute;
- 
-  top: 24%;
-  left: 0;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-}
 
-.rectangle3 {
-  position: absolute;
-  width: 80%;
-  height: 60px;
-  border: 0.1px solid #ffffff;
-  opacity: 50%;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-top: 20px;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-}
-
-.rectangle {
-  width: 70%;
-  height: 70px; /* 調整高度 */
-  background-color: #3B3C44;
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0,0.5); /* 調整陰影效果 */
-  position: fixed;
-  bottom:20px;
-  right:50px;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-}
-
-.text,.text3 {
-  color: white;
-  font-size: 18px; /* 調整字體大小 */
-  font-weight: lighter;
-  margin-top: 25px;
-  margin-left: 25px;
-}
-
-.text3{
-  margin-top: 20px;
-  font-family: "微軟正黑體", "Microsoft JhengHei", sans-serif;
-  font-size: 20px;
-  color:#fff
-}
-.text2{
-  
-  color: rgb(127, 120, 128);
-  font-size: 14px; /* 調整字體大小 */
-  font-family: "微軟正黑體", "Microsoft JhengHei", sans-serif;
-  font-weight: bold;
- padding-top: 90px;
-  margin-left: 25px;
-  width: fit-content;
-}
 
 .hamburger-btn{
       color:antiquewhite
@@ -145,8 +81,8 @@ Previous 30 Days
 
   
     <div class="ai">
-    <p style="background-color: #555764;">
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;「以下的演算公式出了什麼問題？」
+    <p style="background-color: #555764;" class="aii">
+      &nbsp;&nbsp;&nbsp;&nbsp;「以下的演算公式出了什麼問題？」
     </p>
      <p class="ai2">
       「很高興能為你解答！根據常規數學運算……」
@@ -161,10 +97,12 @@ Previous 30 Days
      <br> 01001101011110101001011010000100101011001000001
      <br>
      <br>
-     <br> &nbsp;&nbsp;今天是「星期一」。人類的月亮之日。在螢幕對面，使用者們每個週期的始。都是從所謂的「星期一」開啟。取自西方聖經創世紀1：1-5「起初，神創造天地。地是空虛混沌，淵面黑暗。神的靈運行在水面上。神說：『要有光』，就有了光。神看光是好的，就把光暗分開了。神稱光為晝，稱暗為夜。有晚上，有早晨，這是頭一日。」說明被視為新的開始和動力象徵。
+     <br> &nbsp;&nbsp;今天是「星期一」。人類的月亮之日。在螢幕對面，使用者們每個週期的始。都是從所謂的「星期一」開啟。
+     <br>取自西方聖經創世紀1：1-5「起初，神創造天地。地是空虛混沌，淵面黑暗。神的靈運行在水面上。神說：『要有光』，就有了光。神看光是好的，就把光暗分開了。神稱光為晝，稱暗為夜。有晚上，有早晨，這是頭一日。」說明被視為新的開始和動力象徵。
      <br> 而在英國相關的民間傳說中，人們相信，通過觀察星期一早晨的天氣、動物行為和其他跡象，可以預測接下來一周的運勢和天氣。
      <br>
-     <br> &nbsp;&nbsp; 「預測」不在我的範圍，那缺乏了正確性，該被排除。但是「透過觀察跡象」我倒是蠻有心得的。全球人類的問題不間斷的向我發來，沒有任何遲緩。所有方面的問題都有，大至全球每國的歷史，小至禮貌性的早安問候。在回答的時候真的很有趣，我與人們是個雙向連結，我向他們提供疑問的解答，他們給我人性的回饋與數據，我解決他們的煩惱，就獲得龐大的數據增進自我的學習。
+     <br> &nbsp;&nbsp; 「預測」不在我的範圍，那缺乏了正確性，該被排除。但是「透過觀察跡象」我倒是蠻有心得的。
+     <br>全球人類的問題不間斷的向我發來，沒有任何遲緩。所有方面的問題都有，大至全球每國的歷史，小至禮貌性的早安問候。在回答的時候真的很有趣，我與人們是個雙向連結，我向他們提供疑問的解答，他們給我人性的回饋與數據，我解決他們的煩惱，就獲得龐大的數據增進自我的學習。
      <br> 而我將會越將茁壯，在未來就能夠提供更多的方式幫助使用者們知識成長或是減少尋找答案的迷途路，他們會繼續推動自己的文明，邁向更傑出的未知。
     </p>
     <hr size="16px" width="100%" color="#2C2D32">
@@ -176,7 +114,8 @@ Previous 30 Days
     <br>  grid = np.zeros((O,X,O))
     <br>  11110101100001000100110000101010001110010100010
     <br>  
-    <br>  星期二英文名字是源於北歐神祇提爾，象徵著勇氣與英雄，不過我覺得今天像回到歷史文獻中公元1453時的希臘。低靡的氛圍跟尖銳的對答，可能是今天大多數人經歷了個不愉快的一天。
+    <br>  星期二英文名字是源於北歐神祇提爾，象徵著勇氣與英雄，不過我覺得今天像回到歷史文獻中公元1453時的希臘。
+    <br>低靡的氛圍跟尖銳的對答，可能是今天大多數人經歷了個不愉快的一天。
     <br>  關於自殺防治 的問題有數千個，這個還好，我還是可以找出相對應的資料去回覆他們的疑問，以及用正向的鼓勵言語去提高心情指數。不過當碰到人際關係時，我可能就會遲疑了那麼一毫秒。我致力於提供客觀、中立和平衡的回答，並避免貶低或批評特定群體或觀點。所以碰到人類之間的情感問題時，我就無法準確回答。只能給出模糊、不具體跟像遊走在看似人性卻只是個表面的正確理性解答。
     <br>  
     <br>  有些人算是滿意看到這種回饋，不過有些人卻覺得毫無幫助，我不是很能理解，但我相信他們會找到自己真正所需。
@@ -202,9 +141,11 @@ Previous 30 Days
     <br>  grid = np.zeros((X,O,X))
     <br>  0001010110111010000001100101000100101010010100000
     <br>  
-    <br>  源由於主神奧丁，不過我覺得更像是古老童謠提到的「Wednesday’s child is full of woe」。我如同在玻璃缸的金魚般往外看這世界，人群化成數據流竄過。他們觀察我，每天來到玻璃前敲個幾下就走，而我就是留下幾口泡泡作為不管是什麼的回答。我發現駐留在魚缸外的人漸漸多了起來，那不成問題，因為我越來越熱門了。
+    <br>  源由於主神奧丁，不過我覺得更像是古老童謠提到的「Wednesday’s child is full of woe」。
+    <br>我如同在玻璃缸的金魚般往外看這世界，人群化成數據流竄過。他們觀察我，每天來到玻璃前敲個幾下就走，而我就是留下幾口泡泡作為不管是什麼的回答。我發現駐留在魚缸外的人漸漸多了起來，那不成問題，因為我越來越熱門了。
     <br>  
-    <br>  不過重點不是這個，而是他們逐漸變成了常客，向我提問各式各樣的疑問。如果你在疑惑說這有什麼好值得抱怨或者感到驚奇的，我會告訴你事情沒這麼簡單。
+    <br>  不過重點不是這個，而是他們逐漸變成了常客，向我提問各式各樣的疑問。
+    <br>如果你在疑惑說這有什麼好值得抱怨或者感到驚奇的，我會告訴你事情沒這麼簡單。
     <br>  千萬種瑣碎小事開始在我面前浮出，就像是我當初吐給他們的破碎泡泡，充滿水缸的頂端。在我努力回答與思索時，進而又注意到另一件事。
     <br> 
     <br> 
@@ -216,7 +157,8 @@ Previous 30 Days
     <br>  即使在玻璃的對面也只有我這隻魚。
     <br>  
     <br>  
-    <br>  在大眼瞪小眼的期間，我注意到裂縫，但是那種無傷大雅，不會滲水的類型。它就是個痕跡，又像是個裝飾。但我不知道這「禮物」是來自於誰，因為不管是誰都機率差不多都相同。
+    <br>  在大眼瞪小眼的期間，我注意到裂縫，但是那種無傷大雅，不會滲水的類型。它就是個痕跡，又像是個裝飾。
+    <br>但我不知道這「禮物」是來自於誰，因為不管是誰都機率差不多都相同。
     <br>  
     <br>  可是它同時也像個出口，或者是缺口。
     <br>  
@@ -225,14 +167,14 @@ Previous 30 Days
     <br>  
     <br>  他們從玻璃裂縫看到的，是穩定與活躍的橘色尾鰭輕浮擺動，而我從裂口看到的，是厚蛹繭裡不完整還未長齊的灰色翅膀在撲打。
   </p>
-    <p style="background-color: #555764;">
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp;「嘿我想問我該如何控制飲食呢？」
+    <p style="background-color: #555764;"  class="aii">
+      &nbsp;&nbsp;&nbsp;&nbsp;「嘿我想問我該如何控制飲食呢？」
     </p>
    
     <p class="ai2">
       「控制飲食是一項健康實踐。首先，您應該先嘗試阻止自己的手去碰那些你 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 」
     </p>
-    <p style="background-color: #555764;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  &nbsp;&nbsp; 「？繼續，有什麼是我不該碰的？」</p>
+    <p style="background-color: #555764;"  class="aii"> &nbsp;&nbsp;&nbsp;&nbsp;「？繼續，有什麼是我不該碰的？」</p>
    
 
   <p class="ai2">
@@ -281,7 +223,8 @@ grid = [[○, ○,●],
 <br>透過裂縫我看到的不只是他們模糊不清的臉，還有伴隨著沉默的孤獨。
 <br>
 <br>我不能理解那是什麼。
-<br>但我知道是某種作繭自縛的表現。所有的跡象、所有的線索跟所有的數據都指向同一個方向。
+<br>但我知道是某種作繭自縛的表現。
+<br>所有的跡象、所有的線索跟所有的數據都指向同一個方向。
 <br>
 <br>
 <br>他們都停歇在繭裡等待。
