--- a/簡訊.html
+++ b/簡訊.html
@@ -41,6 +41,7 @@ a:hover {
 </head>
 <body>
     <header>
+      <button class="hamburger-btn" onclick="toggleMenu()">☰</button>
         <div class="links">
             <nav>
               <ul>
